factory method - renamed wrapper to creator component and added top bar in the angular app

--- a/src/app/creational/factory-method-with-params/real-world/real-world.component.html
+++ b/src/app/creational/factory-method-with-params/real-world/real-world.component.html
@@ -1,3 +1,3 @@
-<fm-wrapper-component [mode]="textMode" [data]="genericData"></fm-wrapper-component>
-<fm-wrapper-component [mode]="textAreaMode" [data]="genericData"></fm-wrapper-component>
-<fm-wrapper-component [mode]="selectMode" [data]="genericData"></fm-wrapper-component>
+<fm-creator-component [mode]="textMode" [data]="genericData"></fm-creator-component>
+<fm-creator-component [mode]="textAreaMode" [data]="genericData"></fm-creator-component>
+<fm-creator-component [mode]="selectMode" [data]="genericData"></fm-creator-component>
