added flyweight pattern

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -10,3 +10,6 @@
 <a [routerLink]="['/page-object']">
     <h4>Page-Object</h4>
 </a>
+<a [routerLink]="['/flyweight']">
+    <h4>Flyweight</h4>
+</a>
