added simple connector and store and updated mvvm pattern

--- a/src/app/ui/mvvm/real-world/real-world.component.html
+++ b/src/app/ui/mvvm/real-world/real-world.component.html
@@ -1,4 +1,4 @@
 <ul>
     <li *ngFor="let productName of productNames">{{productName}}</li>
 </ul>
-<button (click)="addNewProductName()">Add new product</button>
+<button (click)="addNewProduct()">Add new product</button>
