--- a/src/app/structural/facade/real-world/real-world.component.html
+++ b/src/app/structural/facade/real-world/real-world.component.html
@@ -1,4 +1,6 @@
-<span>One text</span>
-<fa-tooltip text="one tooltip" (shown)="tooltipWasShown()"></fa-tooltip>
-<span>Another text</span>
-<fa-tooltip text="another tooltip" (shown)="tooltipWasShown()"></fa-tooltip>
+<div class="container">
+    <span>One text</span>
+    <fa-tooltip class="tooltip" text="one tooltip" (shown)="tooltipWasShown()"></fa-tooltip>
+    <span>Another text</span>
+    <fa-tooltip class="tooltip" text="another tooltip" (shown)="tooltipWasShown()"></fa-tooltip>
+</div>
