--- a/src/app/ui/page-object/real-world/real-world.component.html
+++ b/src/app/ui/page-object/real-world/real-world.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="name-container">
     <label for="name"></label>
     <input type="text" name="name" [value]="name" (input)="name = $event.target.value" />
 </div>
