--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,8 @@
 <a [routerLink]="['/']">
     <h4>Factory method pattern</h4>
 </a>
-<a [routerLink]="['/facade']">
-    <h4>Facade</h4>
+<a [routerLink]="['/adapter']">
+    <h4>Adapter</h4>
 </a>
 <a [routerLink]="['/strategy']">
     <h4>Strategy</h4>
